Added: hero section layout in html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>Bootstrap Freelancer</title>
 </head>
 <body class="debug">
-   <div class="container-fluid">
 
+   <div class="container-fluid">
+<!-- HEADER -->
     <header class="page-header">
         <div class="container">
             <div class="row">
@@ -22,6 +23,30 @@
         </div>
     </header>
     
+    <!-- HERO -->
+     <div class="container">
+        <div class="row flex-column">
+           <div class="col">
+            <figure class="hero-featured-img d-flex justify-content-center">
+                <img src="./img/avatar.svg" alt="">
+            </figure>
+           </div>
+
+           <div class="col d-flex justify-content-center">
+            <h2>Start Bootstrap</h2>
+           </div>
+
+           <div class="col d-flex justify-content-center">
+            <span class="star"><i class="fa-solid fa-star"></i></span>
+           </div>
+
+           <div class="col d-flex justify-content-center">
+            <p>Graphic artist - Web Designer - Illustrator</p>
+           </div>
+
+        </div>
+     </div>
+
    </div>
 </body>
 </html>
