--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     </header>
     
     <!-- HERO -->
+
      <div class="container">
+
         <div class="row flex-column">
            <div class="col">
             <figure class="hero-featured-img d-flex justify-content-center">
@@ -33,7 +35,7 @@
            </div>
 
            <div class="col d-flex justify-content-center">
-            <h2>Start Bootstrap</h2>
+            <h1>Start Bootstrap</h1>
            </div>
 
            <div class="col d-flex justify-content-center">
@@ -45,6 +47,71 @@
            </div>
 
         </div>
+
+        <!-- PORTFOLIO -->
+
+       <div class="container">
+        <div class="row">
+
+            <div class="col-12 d-flex justify-content-center">
+                <h2>Portfolio</h2>
+            </div>
+
+            <div class="col-12 d-flex justify-content-center">
+                <span class="star"><i class="fa-solid fa-star"></i></span>
+            </div>
+
+            <div class="col-12 d-flex flex-wrap">
+
+                <div class="col-4 d-flex justify-content-center">
+                    <img class="portfolio-img" src="./img/cabin.png" alt="">
+                </div>
+
+                <div class="col-4 d-flex justify-content-center">
+                    <img class="portfolio-img" src="./img/cake.png" alt="">
+                </div>
+
+                <div class="col-4 d-flex justify-content-center">
+                    <img class="portfolio-img" src="./img/circus.png" alt="">
+                </div>
+
+                <div class="col-4 d-flex justify-content-center">
+                    <img class="portfolio-img" src="./img/game.png" alt="">
+                </div>
+
+                <div class="col-4 d-flex justify-content-center">
+                    <img class="portfolio-img" src="./img/safe.png" alt="">
+                </div>
+
+                <div class="col-4 d-flex justify-content-center">
+                    <img class="portfolio-img" src="./img/submarine.png" alt="">
+                </div>
+                
+            </div>
+        </div>
+       </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
      </div>
 
    </div>
