Added: about layout section in html and the relative responsive css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
    <div class="container-fluid">
 <!-- HEADER -->
-    <header class="page-header">
+       <header class="page-header">
         <div class="container">
             <div class="row">
                 <div class="col-12 d-flex">
@@ -21,11 +21,11 @@
                 </div>
             </div>
         </div>
-    </header>
+       </header>
     
     <!-- HERO -->
 
-     <div class="container">
+       <div class="container">
 
         <div class="row flex-column">
            <div class="col">
@@ -48,7 +48,32 @@
 
         </div>
 
-        <!-- PORTFOLIO -->
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+       </div>
+
+       <!-- PORTFOLIO -->
 
        <div class="container">
         <div class="row">
@@ -91,28 +116,31 @@
         </div>
        </div>
 
+       <!-- ABOUT -->
+
+       <div class="container">
+        <div class="row flex-column">
+
+            <div class="col-12 d-flex justify-content-center">
+                <h2>About</h2>
+            </div>
+
+            <div class="col-12 d-flex justify-content-center">
+                <span class="star"><i class="fa-solid fa-star"></i></span>
+            </div>
 
 
+            <div class="col-12 d-flex justify-content-center about-col">
+                <div class="col-6"></div>
+                <div class="col-6"></div>
+            </div>
 
+            <div class="col-12 d-flex justify-content-center">
+                <a href="#"><i class="fa-solid fa-download"></i> Download</a>
+            </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-     </div>
+        </div>
+       </div>
 
    </div>
 </body>
